<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/background_card_black_bottom"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/tintSecondary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/detail_user"
        android:textColor="@color/textSecondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.ivbaranov.mfb.MaterialFavoriteButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mfb_animate_favorite="true"
        app:mfb_animate_unfavorite="false"
        app:mfb_bounce_duration="300"
        app:mfb_favorite_image="@drawable/ic_favorite"
        app:mfb_not_favorite_image="@drawable/ic_unfavorite"
        app:mfb_padding="12"
        app:mfb_rotation_angle="360"
        app:mfb_rotation_duration="400"
        app:mfb_size="48"
        app:mfb_type="heart"
        app:tint="@color/tintSecondary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profile"
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:layout_marginTop="32dp"
                app:tint="@color/tintPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:ellipsize="marquee"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="@color/textPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_profile" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/montserrat_semibold"
                android:maxLines="1"
                android:text="@string/username"
                android:textColor="@color/textPrimary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_regular"
                android:paddingHorizontal="32dp"
                android:text="@string/strip"
                android:textAlignment="center"
                android:textColor="@color/textPrimary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_username" />

            <ImageView
                android:id="@+id/iv_followers_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/icon_followers_following"
                android:src="@drawable/ic_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_bio"
                app:tint="@color/tintPrimary" />

            <TextView
                android:id="@+id/tv_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/montserrat_semibold"
                android:maxLines="1"
                android:text="@string/zero"
                android:textColor="@color/textPrimary"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_followers_following"
                app:layout_constraintStart_toEndOf="@+id/iv_followers_following"
                app:layout_constraintTop_toTopOf="@+id/iv_followers_following" />

            <TextView
                android:id="@+id/textFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/textFollowers"
                android:textColor="@color/textPrimary"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_followers"
                app:layout_constraintStart_toEndOf="@+id/tv_followers"
                app:layout_constraintTop_toTopOf="@+id/tv_followers" />

            <ImageView
                android:id="@+id/iv_circle"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/icon_circle"
                android:src="@drawable/ic_circle"
                app:layout_constraintBottom_toBottomOf="@+id/iv_followers_following"
                app:layout_constraintStart_toEndOf="@+id/textFollowers"
                app:layout_constraintTop_toTopOf="@+id/iv_followers_following"
                app:tint="@color/tintPrimary" />

            <TextView
                android:id="@+id/tv_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/montserrat_semibold"
                android:maxLines="1"
                android:text="@string/zero"
                android:textColor="@color/textPrimary"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_followers_following"
                app:layout_constraintStart_toEndOf="@+id/iv_circle"
                app:layout_constraintTop_toTopOf="@+id/iv_followers_following" />

            <TextView
                android:id="@+id/textFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/textFollowing"
                android:textColor="@color/textPrimary"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_following"
                app:layout_constraintStart_toEndOf="@+id/tv_following"
                app:layout_constraintTop_toTopOf="@+id/tv_following" />

            <ImageView
                android:id="@+id/iv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/icon_company"
                android:src="@drawable/ic_company"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_followers_following"
                app:tint="@color/tintPrimary" />

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/montserrat_regular"
                android:maxLines="1"
                android:text="@string/strip"
                android:textColor="@color/textPrimary"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_company"
                app:layout_constraintStart_toEndOf="@+id/iv_company"
                app:layout_constraintTop_toTopOf="@+id/iv_company" />

            <ImageView
                android:id="@+id/iv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/icon_company"
                android:src="@drawable/ic_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_company"
                app:tint="@color/tintPrimary" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/montserrat_regular"
                android:maxLines="1"
                android:text="@string/strip"
                android:textColor="@color/textPrimary"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_location"
                app:layout_constraintStart_toEndOf="@+id/iv_location"
                app:layout_constraintTop_toTopOf="@+id/iv_location" />

            <ImageView
                android:id="@+id/iv_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/icon_company"
                android:src="@drawable/ic_repository"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_location"
                app:tint="@color/tintPrimary" />

            <TextView
                android:id="@+id/tv_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/montserrat_regular"
                android:maxLines="1"
                android:text="@string/zero"
                android:textColor="@color/textPrimary"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_repository"
                app:layout_constraintStart_toEndOf="@+id/iv_repository"
                app:layout_constraintTop_toTopOf="@+id/iv_repository" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/repositories"
                android:textColor="@color/textPrimary"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_repository"
                app:layout_constraintStart_toEndOf="@+id/tv_repository"
                app:layout_constraintTop_toTopOf="@+id/tv_repository" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                app:tabTextColor="@color/gray"
                app:tabSelectedTextColor="@color/textPrimary"
                app:tabIndicatorColor="@color/tintPrimary"
                app:tabIndicatorFullWidth="true"
                app:tabIndicatorAnimationMode="linear"
                app:layout_constraintTop_toBottomOf="@id/iv_repository"/>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="420dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintTop_toBottomOf="@id/tab_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/tintPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>